--- a/services_zh.html
+++ b/services_zh.html
@@ -86,7 +86,7 @@
                 <div class="line-start"></div>
                 <div class="left-column">
                     <h2>风险管理</h2>
-                    <p>We help you set goals, manage investments, and grow your wealth.</p>
+                    <p>帮助应对突发事件，避免财务损失，确保财产和收入得到保障。</p>
                     <img src="pictures\risk_image.png" alt="财务规划图片">
                 </div>
                 <div class="line-center"></div>
@@ -110,7 +110,7 @@
                 <div class="line-start"></div>
                 <div class="left-column">
                     <h2>保险服务</h2>
-                    <p>We help you plan for immediate and long-term health needs.</p>
+                    <p>防范意外事件带来的经济压力，如疾病、火灾或车祸。</p>
                     <img src="pictures\insurance_image.png" alt="医疗规划图片">
                 </div>
                 <div class="line-center"></div>
@@ -135,7 +135,7 @@
                 <div class="line-start"></div>
                 <div class="left-column">
                     <h2>财务管理</h2>
-                    <p>We assist with wills, trusts, and charitable giving to preserve your assets.</p>
+                    <p>通过规划和投资，确保未来的财务安全，达到储蓄和财富增值的目标。</p>
                     <img src="pictures\finance_image.png" alt="财务规划图片">
                 </div>
                 <div class="line-center"></div>
@@ -182,10 +182,8 @@
 
             </div>
             <div class="below-contact scroll-hidden">
-                <p>Are you interested? Contact our sales department now !!!</p>
-                <p>Erkan Giris / Sales Manager</p>
-                <p>+0(550) 544 7514</p>
-                <p>sales@crosson.com</p>
+                <p>您感兴趣吗？现在就联系我们!!!</p>
+                <button class="button" onclick="window.location.href='contact_us.html#contact-section'">点击我 !!</button>
             </div>
         </div>
     </div>
