--- a/contact_us.html
+++ b/contact_us.html
@@ -76,7 +76,7 @@
             </div>
         </div>
         <div class="form ">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeDAPQHKNOxsFBwM8Cfu6pPAkZ4cUdjFD9FHxmy1nBcL8UPBg/viewform?embedded=true" width="640" height="956" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeDAPQHKNOxsFBwM8Cfu6pPAkZ4cUdjFD9FHxmy1nBcL8UPBg/viewform?embedded=true" width="90%" height="90%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
     </div>
 
