--- a/contact_us.html
+++ b/contact_us.html
@@ -60,15 +60,14 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.392090247788!2d103.79297290852733!3d1.5320354209289218!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da6c40cbf98875%3A0x582fac6b6382e3ef!2s21-02%2C%20Jalan%20Ros%20Merah%202%2F8%2C%20Taman%20Johor%20Jaya%2C%2081100%20Johor%20Bahru%2C%20Johor!5e0!3m2!1szh-CN!2smy!4v1726119458402!5m2!1szh-CN!2smy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     
-    <div class="working-hour">
+    <div class="working_hour scroll-hidden">
         <h2>Working <span class="green">Hour</span></h2>
-        <p>In order to better serve our clients, JV Wealth Advisory's hours of operation are as follows:
-            <ul class="working-time">
-                <li>Monday to Friday: 9:00 a.m. to 5:00 p.m.</li>
-                <li>Sunday, Saturday and Public Holidays: Closed</li>
-            </ul>
-            If you have any questions or need to enquire about our services, please feel free to contact us during our working hours.
-        </p>
+        <p>In order to better serve our clients, JV Wealth Advisory's hours of operation are as follows:</p>
+        <ul class="working-time">
+            <li>Monday to Friday: 9:00 a.m. to 5:00 p.m.</li>
+            <li>Sunday, Saturday and Public Holidays: Closed</li>
+        </ul>
+        <p>If you have any questions or need to enquire about our services, please feel free to contact us during our working hours.</p>
     </div>
 
     <div class="enquiry scroll-hidden">
