--- a/career.html
+++ b/career.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <div class="container">
+        <div class="containers">
             <div class="jv">
                 <img src="pictures/jvlogo.png" alt="">
                 <h1>JV Wealth Advisory</h1>
