--- a/contact_us.html
+++ b/contact_us.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="containers">
             <div class="jv">
                 <img src="pictures/jvlogo.png" alt="">
                 <h1>JV Wealth Advisory</h1>
