--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <div class="container">
+        <div class="containers">
             <div class="jv">
                 <img src="pictures/jvlogo.png" alt="">
                 <h1>JV Wealth Advisory</h1>
