--- a/career.html
+++ b/career.html
@@ -199,6 +199,7 @@
                 <li>Comprehensive training program</li>
                 <li>Promotion opportunities</li>
             </ul>
+            <img src="pictures/panda_icon3.png" alt="">
         </div>
         <div class="green_rec"></div>
     </div>
