--- a/index_zh.html
+++ b/index_zh.html
@@ -161,7 +161,6 @@
                 <div class="iframe-slider">
                     <div class="iframe-container">
                         <div class="iframe-wrapper">
-                            
                             <div class="slide">
                                 <div class="fbcomment">
                                     <h3>Cheng Meparu</h3>
@@ -169,7 +168,7 @@
                                         <p>服务态度很好，我一个小白他也很耐心解释很清楚，支持！</p>
                                     </div>
                                     <div class="avatar">
-                                        <img src="https://scontent.fmkz1-1.fna.fbcdn.net/v/t39.30808-6/314324907_6265969586763400_1484905580488348443_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=YEbAal0hyHQQ7kNvgEXXP7P&_nc_ht=scontent.fmkz1-1.fna&_nc_gid=A3Nmf1Qkbypx62lw_R4Tlmv&oh=00_AYCeWA5-pOn7hvT2uIlEEo2PVV42mmd5E1isXF_dxjrSBA&oe=66F203EC">
+                                        <img src="pictures/fbc1.jpg" alt="">
                                     </div>
                                     <div class="like_good">
                                         <img src="pictures/like_good.png">
@@ -186,7 +185,7 @@
                                         <p>Jason & Aivy 在信托遗嘱方面真的很专业也很细心，永远以顾客的需求为主，是我碰过最有耐心和细心的agent~</p>
                                     </div>
                                     <div class="avatar">
-                                        <img src="https://scontent.fmkz1-1.fna.fbcdn.net/v/t1.18169-1/30571161_1714858325295840_2853697806856025361_n.jpg?stp=dst-jpg_s200x200&_nc_cat=102&ccb=1-7&_nc_sid=e4545e&_nc_eui2=AeGqHCkJ6uUJ3wccAGQFS1yv2v6fgGU11ELa_p-AZTXUQhtOLOXfgwc02mJExZ9OPeFsqVGDvN0ECajj_ytKyEB5&_nc_ohc=RkXEiPsmdogQ7kNvgFIv-qz&_nc_ht=scontent.fmkz1-1.fna&oh=00_AYCgNOPRJvAfDBoEJ8nrRBKn_CyV9rQD2j86FYm5Z7Lx7w&oe=6713861A">
+                                        <img src="pictures/fbc2.jpg">
                                     </div>
                                     <div class="like_good">
                                         <img src="pictures/like_good.png">
@@ -203,8 +202,7 @@
                                         <p>很耐心的讲解，人也很nice</p>
                                     </div>
                                     <div class="avatar">
-                                        <img src="https://scontent.fmkz1-2.fna.fbcdn.net/v/t39.30808-6/289867524_7866099866762030_7703323832781956993_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=gh45nk6ZvQcQ7kNvgEy-393&_nc_ht=scontent.fmkz1-2.fna&_nc_gid=AKZAFkPNPFzpMz6AdCF6XLS&oh=00_AYBR9o6qYOlIDGPeY3DzJgI3mfyGE1qHFSf0Q-AjFm0Pfg&oe=66F1F0FE">
-                                    </div>
+                                        <img src="pictures/fbc3.jpg">                                    </div>
                                     <div class="like_good">
                                         <img src="pictures/like_good.png">
                                     </div>
@@ -220,8 +218,7 @@
                                         <p>如果大家在找寻可信赖的遗嘱专业员，我首推 Jason Liew。他的专业咨询服务让我们印象深刻。专业度和亲和力，让我们整个过程都很舒服和愉快。我也介绍给我新加坡的朋友，Jason的服务也让他们留下好印象！</p>
                                     </div>
                                     <div class="avatar">
-                                        <img src="https://scontent.fmkz1-1.fna.fbcdn.net/v/t39.30808-6/245774174_10158905377068387_4793391224060010168_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=j9xeFLxQQk8Q7kNvgGelfQU&_nc_ht=scontent.fmkz1-1.fna&oh=00_AYAI-_9-CPnoL6BHyJOfLdrhzLcteMyPcJYUk5eYrjsY7g&oe=66F1EDA4">
-                                    </div>
+                                        <img src="pictures/fbc4.jpg">                                    </div>
                                     <div class="like_good">
                                         <img src="pictures/like_good.png">
                                     </div>
@@ -237,8 +234,7 @@
                                         <p>谢谢Jason 的专业知识 让我明白和完善的规划！非常耐心，非常感谢 有您！推荐🥰</p>
                                     </div>
                                     <div class="avatar">
-                                        <img src="https://scontent.fmkz1-1.fna.fbcdn.net/v/t39.30808-6/438675165_435137279201642_2511761623886799270_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=pnusilxk_wIQ7kNvgHfvjzd&_nc_ht=scontent.fmkz1-1.fna&_nc_gid=A3mT1Xu8hXuKtg_hxg1bcRg&oh=00_AYBwvOg3kmmmzxtQcElpXxmT9Xs1Wlqq6zifiqP_gmEDwg&oe=66F21CF6">
-                                    </div>
+                                        <img src="pictures/fbc5.jpg">                                    </div>
                                     <div class="like_good">
                                         <img src="pictures/like_good.png">
                                     </div>
@@ -254,8 +250,7 @@
                                         <p>Jason Liew的专业咨询服务让我们印象深刻。他的专业度和亲和力，让你整个过程都很舒服和愉快。如果你正在寻找投资理财咨询，我推荐你Jason Liew ～</p>
                                     </div>
                                     <div class="avatar">
-                                        <img src="https://scontent.fmkz1-1.fna.fbcdn.net/v/t31.18172-1/16804209_10155040034144868_3382017527548410608_o.jpg?stp=dst-jpg_s200x200&_nc_cat=101&ccb=1-7&_nc_sid=e4545e&_nc_ohc=dK0iLWp5dAAQ7kNvgExqSJC&_nc_ht=scontent.fmkz1-1.fna&_nc_gid=As66eWGiVDvAk_rcYQBp40j&oh=00_AYCA_zXOM3A2t7PFrbaG3fa3UWQAjMzgLgkEsi_8xgLMZw&oe=6713A246">
-                                    </div>
+                                        <img src="pictures/fbc6.jpg">                                    </div>
                                     <div class="like_good">
                                         <img src="pictures/like_good.png">
                                     </div>
@@ -271,8 +266,7 @@
                                         <p>Jason doing very well in my estate planning and help us to clear our doubt. Pro…</p>
                                     </div>
                                     <div class="avatar">
-                                        <img src="https://scontent.fmkz1-1.fna.fbcdn.net/v/t39.30808-6/326483448_915721906523075_7632588757002910266_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=iGj0A_2GdWgQ7kNvgFCF3Z2&_nc_ht=scontent.fmkz1-1.fna&_nc_gid=AwrbETrDL01D81-I7yNSUfC&oh=00_AYAoBxM1uSERGhjkqTSWufnom8j4OjrLh4YTdU5IpHQXCg&oe=66F21ABA">
-                                    </div>
+                                        <img src="pictures/fbc7.jpg">                                    </div>
                                     <div class="like_good">
                                         <img src="pictures/like_good.png">
                                     </div>
@@ -288,15 +282,14 @@
                                         <p>Very professional service</p>
                                     </div>
                                     <div class="avatar">
-                                        <img src="https://scontent.fmkz1-1.fna.fbcdn.net/v/t39.30808-6/216983704_1023155835187192_6309258300419037432_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=WpdyN5vrVHYQ7kNvgHYyGEE&_nc_ht=scontent.fmkz1-1.fna&_nc_gid=AnhS8bbwemf-hbRZP601_Qm&oh=00_AYBwL3kREw49OZ972KSNddSxCUy-KuCSWq_k0yszG7LJlA&oe=66F22288">
-                                    </div>
+                                        <img src="pictures/fbc8.jpg">                                    </div>
                                     <div class="like_good">
                                         <img src="pictures/like_good.png">
                                     </div>
                                     <div class="design"><p>- f -</p></div>
-
                                 </div>
                             </div>
+                          
                         </div>
                     </div>
                 </div>
