--- a/contact_us.html
+++ b/contact_us.html
@@ -112,7 +112,7 @@
                         <h3>Group manager</h3> 
                         <p>
                             Name:                            Aivy Tee
-                            <br>Contact Number:          012-7200251 
+                            <br>Contact Number:          016-2774927 
                             <br>Email:                             aivyai10389@gmail.com
                         </p>
                         <hr>
@@ -190,7 +190,7 @@
                         <p>
                             Name:                            Yvon Lai
                             <br>Contact Number:          010-3524600 
-                            <br>Email:                             swoon1427@gmail.com
+                            <br>Email:                             yvonlai26@gmail.com
                         </p>
                         <hr>
                         <div class="award">
@@ -235,6 +235,8 @@
                             <h4>Personal Award</h4>
                             <p>Star Producer</p>
                             <p>Master Sales Award</p>
+                            <p>SES VIP</p>
+                            <p>Supremacy</p>
                         </div>
                     </div> 
                 </div> 
