--- a/achievement.html
+++ b/achievement.html
@@ -88,7 +88,7 @@
         <div class="cc_bg">
             <h2>Community <span class="green">contributions</span></h2>
             <div class="cc_img">
-                <div class="first_row" id="cc_slider">
+                <div class="first_row" id="cc_slider1">
                     <img src="pictures/cc1.jpg" alt="">
                     <img src="pictures/cc3.jpg" alt="">
                     <img src="pictures/cc5.jpg" alt="">
@@ -100,7 +100,7 @@
                     <img src="pictures/cc15.jpg" alt="">
                     <img src="pictures/cc17.jpg" alt="">
                 </div>
-                <div class="second_row" id="cc_slider">
+                <div class="second_row" id="cc_slider2">
                     <img src="pictures/cc2.jpg" alt="">
                     <img src="pictures/cc8.png" alt="">
                     <img src="pictures/cc20.jpg" alt="">
@@ -153,6 +153,47 @@
     </footer>
 
     <script>
+ // 获取两个图片滑动区域
+ const slider1 = document.getElementById('cc_slider1');
+        const slider2 = document.getElementById('cc_slider2');
+
+        // 初始位置和方向，1表示向右，-1表示向左
+        let position1 = 0;
+        let direction1 = 1;
+
+        let position2 = 0;
+        let direction2 = 1;
+
+        // 滚动速度
+        const scrollSpeed = 2; // 调整此值可加快或减慢滚动速度
+
+        // 滚动函数
+        function scrollImages() {
+            // 计算第一排的总宽度
+            const totalWidth1 = slider1.scrollWidth;
+            const visibleWidth1 = slider1.parentElement.offsetWidth;
+
+            // 第一排图片的滚动逻辑
+            position1 += scrollSpeed * direction1;
+            if (position1 > 0 || position1 < -(totalWidth1 - visibleWidth1)) {
+                direction1 *= -1; // 当到达最左边或最右边时改变方向
+            }
+            slider1.style.transform = `translateX(${position1}px)`;
+
+            // 计算第二排的总宽度
+            const totalWidth2 = slider2.scrollWidth;
+            const visibleWidth2 = slider2.parentElement.offsetWidth;
+
+            // 第二排图片的滚动逻辑
+            position2 += scrollSpeed * direction2;
+            if (position2 > 0 || position2 < -(totalWidth2 - visibleWidth2)) {
+                direction2 *= -1; // 当到达最左边或最右边时改变方向
+            }
+            slider2.style.transform = `translateX(${position2}px)`;
+        }
+
+        // 每16毫秒更新一次，模拟60FPS效果
+        setInterval(scrollImages, 16);
 
     const navLinks = document.querySelectorAll('.nav-link');
         
