--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
     <div class="comment scroll-hidden">
         <div class="facebook_comment">
-            <img src="pictures/rates.png" alt="">
+            <img class="rate" src="pictures/rates.png" alt="">
             <div class="comment_content">
                 <h2>What Our Customers Say <span class="green">About Us</span></h2>
                 <div class="iframe-slider">
