--- a/index_zh.html
+++ b/index_zh.html
@@ -122,19 +122,19 @@
                 <span> <a href="services_zh.html">更加详细</a></span> <!-- 可放置文字或留空 -->
             </div>
             <div class="p_s_container">
-                <div class="p_s" onclick="window.location.href='services.html#finance-section'">
+                <div class="p_s" onclick="window.location.href='services_zh.html#finance-section'">
                     <h2>风险管理</h2>
                     <img src="pictures/legacy_image.png" alt="">
                 </div>
-                <div class="p_s" onclick="window.location.href='services.html#legacy-section'">
+                <div class="p_s" onclick="window.location.href='services_zh.html#healthcare-section'">
                     <h2>保险服务</h2>
                     <img src="pictures/healthcare_image.png" alt="">
                 </div>
-                <div class="p_s" onclick="window.location.href='services.html#finance-section'">
+                <div class="p_s" onclick="window.location.href='services_zh.html#legacy-section'">
                     <h2>财务管理</h2>
                     <img src="pictures/finance_image.png" alt="">
                 </div>
-                <div class="p_s" onclick="window.location.href='services.html#claim-section'">
+                <div class="p_s" onclick="window.location.href='services_zh.html#claim-section'">
                     <h2>理赔服务</h2>
                     <img src="pictures/claim_image.png" alt="">
                 </div>    
