--- a/achievement.html
+++ b/achievement.html
@@ -153,48 +153,47 @@
     </footer>
 
     <script>
-  // 获取两个图片滑动区域
-  const slider1 = document.getElementById('cc_slider1');
+    const slider1 = document.getElementById('cc_slider1');
     const slider2 = document.getElementById('cc_slider2');
 
-    // 初始位置和方向，1表示向右，-1表示向左
+
     let position1 = 0;
     let direction1 = 1;
 
     let position2 = 0;
     let direction2 = 1;
 
-    // 滚动速度
-    const scrollSpeed = 1; // 速度调低，缓解卡顿
+
+    const scrollSpeed = 1;
 
     function scrollImages() {
-        // 计算第一排的总宽度
+   
         const totalWidth1 = slider1.scrollWidth;
         const visibleWidth1 = slider1.parentElement.offsetWidth;
 
-        // 第一排图片的滚动逻辑
+  
         position1 += scrollSpeed * direction1;
         if (position1 > 0 || position1 < -(totalWidth1 - visibleWidth1)) {
-            direction1 *= -1; // 当到达最左边或最右边时改变方向
+            direction1 *= -1; 
         }
         slider1.style.transform = `translate3d(${position1}px, 0, 0)`;
 
-        // 计算第二排的总宽度
+ 
         const totalWidth2 = slider2.scrollWidth;
         const visibleWidth2 = slider2.parentElement.offsetWidth;
 
-        // 第二排图片的滚动逻辑
+
         position2 += scrollSpeed * direction2;
         if (position2 > 0 || position2 < -(totalWidth2 - visibleWidth2)) {
-            direction2 *= -1; // 当到达最左边或最右边时改变方向
+            direction2 *= -1;
         }
         slider2.style.transform = `translate3d(${position2}px, 0, 0)`;
 
-        // 使用 requestAnimationFrame 进行下一帧调用
+  
         requestAnimationFrame(scrollImages);
     }
 
-    // 开始动画
+
     requestAnimationFrame(scrollImages);
 
     const navLinks = document.querySelectorAll('.nav-link');
