--- a/achievement_zh.html
+++ b/achievement_zh.html
@@ -114,7 +114,9 @@
                     <img src="pictures/cc10.jpg" alt="">
                     <img src="pictures/cc14.jpg" alt="">
                     <img src="pictures/cc16.jpg" alt="">
-
+                    <img src="pictures/cc23.jpg" alt="">
+                    <img src="pictures/cc24.jpg" alt="">
+                    
                 </div>
 
             </div>
