--- a/our_company.html
+++ b/our_company.html
@@ -72,6 +72,13 @@
             </div>
         </div>
     </div>
+
+    <div class="film">
+        <video scroll-hidden1>
+            <source src="Jv_video3.mp4" type="video/mp4">
+        </video>
+    </div>
+
     <div class="ourcompany_content">
         <div class="whyus scroll-hidden1">
             <h2 class="scroll-hidden1">Why us ?</h2>
