--- a/career_zh.html
+++ b/career_zh.html
@@ -193,7 +193,7 @@
                 <li>全面的培训计划</li>
                 <li>晋升机会</li>
             </ul>
-            <img src="pictures/internship.png" alt="">
+            <img src="pictures/panda_icon3.png" alt="">
         </div>
         <div class="green_rec"></div>
     </div>
