--- a/our_company.html
+++ b/our_company.html
@@ -74,7 +74,7 @@
     </div>
 
     <div class="film">
-        <video scroll-hidden1>
+        <video controls scroll-hidden1>
             <source src="Jv_video3.mp4" type="video/mp4">
         </video>
     </div>
