--- a/achievement.html
+++ b/achievement.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="header.css">
     <link rel="stylesheet" type="text/css" href="card.css">
     <link rel="stylesheet" type="text/css" href="achievement.css">
-    <title>Achievement</title>
+    <title>Achievement & Community Contributions</title>
 </head>
 
 <body>
