--- a/contact_us_zh.html
+++ b/contact_us_zh.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="header.css">
     <link rel="stylesheet" type="text/css" href="card.css">
 
-    <title>Contact Us</title>
+    <title>联络我们</title>
 </head>
 <body>
     <header>
