--- a/our_company_zh.html
+++ b/our_company_zh.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="header.css">
     <link rel="stylesheet" type="text/css" href="card.css">
     <link rel="stylesheet" type="text/css" href="our_company.css">
-    <title>Our Company</title>
+    <title>我们的公司</title>
 </head>
 
 <body>
@@ -72,6 +72,13 @@
             </div>
         </div>
     </div>
+
+    <div class="film scroll-hidden1">
+        <video controls>
+            <source src="Jv_video3.mp4" type="video/mp4">
+        </video>
+    </div>
+
     <div class="ourcompany_content">
         <div class="whyus scroll-hidden1">
             <h2 class="scroll-hidden1">为何选择我们？</h2>
