--- a/v_m_v.html
+++ b/v_m_v.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="header.css">
     <link rel="stylesheet" type="text/css" href="card.css">
 
-    <title>Document</title>
+    <title>Vision, Mission & Value</title>
 </head>
    
 <body>
