--- a/v_m_v_zh.html
+++ b/v_m_v_zh.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="header.css">
     <link rel="stylesheet" type="text/css" href="card.css">
 
-    <title>Document</title>
+    <title>愿景，使命与价值</title>
 </head>
    
 <body>
