--- a/achievement_zh.html
+++ b/achievement_zh.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="header.css">
     <link rel="stylesheet" type="text/css" href="card.css">
     <link rel="stylesheet" type="text/css" href="achievement.css">
-    <title>Achievement</title>
+    <title>成就与社区贡献</title>
 </head>
 
 <body>
