--- a/our_company.html
+++ b/our_company.html
@@ -73,8 +73,8 @@
         </div>
     </div>
 
-    <div class="film">
-        <video controls scroll-hidden1>
+    <div class="film scroll-hidden1">
+        <video controls>
             <source src="Jv_video3.mp4" type="video/mp4">
         </video>
     </div>
