--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="header.css">
     <link rel="stylesheet" type="text/css" href="card.css">
 
-    <title>JV Wealth Advisory</title>
+    <title>Our Services</title>
 </head>
 
 <body>
