--- a/contact_us.html
+++ b/contact_us.html
@@ -111,9 +111,9 @@
                     <div class="team_info">
                         <h3>Group manager</h3> 
                         <p>
-                            Name:                            Aivy Tee
-                            <br>Contact Number:          016-2774927 
-                            <br>Email:                             aivyai10389@gmail.com
+                            Name: Aivy Tee
+                            <br> Contact Number:<a href="https://wa.me/60162774927"> 016-2774927</a>
+                            <br>Email: aivyai10389@gmail.com
                         </p>
                         <hr>
                         <div class="award">
@@ -131,7 +131,7 @@
                         <h3>Unit manager</h3> 
                         <p>
                             Name:                           Jason Liew
-                            <br>Contact Number:          011-16772315 
+                            <br>Contact Number:<a href="https://wa.me/601116772315"> 011-16772315 </a>
                             <br>Email:                             Jasonllh6872@gmail.com
                         </p>
                         <hr>
@@ -152,7 +152,7 @@
                         <h3>Agent</h3> 
                         <p>
                             Name:                            Dennis Tan
-                            <br>Contact Number:          016-7927132 
+                            <br>Contact Number:<a href="https://wa.me/60167927132"> 016-7927132 </a>
                             <br>Email:                             dennis870924@gmail.com
                         </p>
                         <hr>
@@ -171,7 +171,7 @@
                         <h3>Agent</h3> 
                         <p>
                             Name:                            Lau Pau Swoon
-                            <br>Contact Number:          014-9813505 
+                            <br>Contact Number:<a href="https://wa.me/60149813505"> 014-9813505 </a>
                             <br>Email:                             swoon1427@gmail.com
                         </p>
                         <hr>
@@ -189,7 +189,7 @@
                         <h3>Agent</h3> 
                         <p>
                             Name:                            Yvon Lai
-                            <br>Contact Number:          010-3524600 
+                            <br>Contact Number:<a href="https://wa.me/60103524600"> 010-3524600 </a>
                             <br>Email:                             yvonlai26@gmail.com
                         </p>
                         <hr>
@@ -208,7 +208,7 @@
                         <h3>Agent</h3> 
                         <p>
                             Name:                           Tan Sing Yi
-                            <br>Contact Number:          012-9382203 
+                            <br>Contact Number:<a href="https://wa.me/60129382203"> 012-9382203 </a>
                             <br>Email:                             xinyu_tan2120@hotmail.com
                         </p>
                         <hr>
@@ -227,7 +227,7 @@
                         <h3>Agent</h3> 
                         <p>
                             Name:                           Stephanie Tee
-                            <br>Contact Number:          016-7319327 
+                            <br>Contact Number:<a href="https://wa.me/60167319327"> 016-7319327 </a>
                             <br>Email:                             stephaniefang92@gmail.com
                         </p>
                         <hr>
@@ -248,7 +248,7 @@
                             <h3>Agent</h3> 
                             <p>
                                 Name:                           Chong Zi Jian
-                                <br>Contact Number:          018-7637289 
+                                <br>Contact Number:<a href="https://wa.me/60187637289"> 018-7637289 </a>
                                 <br>Email:                             zijianchong7@gmail.com
                             </p>
                             <hr>
